HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncOperationEscapesRegion/Expected.uv
//! Expected diagnostic metadata for the AsyncOperationEscapesRegion rejected-source specimen.

expectedDiagnostic("E-CON-0281", "rule.21.Prov-Async-Escape-Err")
